--- a/search.html
+++ b/search.html
@@ -50,6 +50,7 @@
                 <li><a href="install.html">Install</a></li>
                 <li><a href="https://cogent3.readthedocs.io">Docs</a></li>
                 <li><a href="https://github.com/cogent3/cogent3">Code</a></li>
+                <li><a href="https://cogent3.org/cogent3/draw/index.html">Gallery</a></li>
                 <li><a href="projects.html">Projects Using</a></li>
                 <li><a href="https://github.com/cogent3/c3dev/wiki/Code-of-Conduct">Code of Conduct</a></li>
             
@@ -144,7 +145,7 @@
       
     </p>
     <p>
-        &copy; Copyright 2020, Gavin Huttley.<br/>
+        &copy; Copyright 2020, cogent3 Team.<br/>
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.0.2.<br/>
     </p>
   </div>
