--- a/search.html
+++ b/search.html
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav">
             
                 <li><a href="install.html">Install</a></li>
-                <li><a href="https://cogent3.readthedocs.io">Docs</a></li>
+                <li><a href="https://cogent3.org/cogent3">Docs</a></li>
                 <li><a href="https://github.com/cogent3/cogent3">Code</a></li>
                 <li><a href="https://cogent3.org/cogent3/draw/index.html">Gallery</a></li>
                 <li><a href="projects.html">Projects Using</a></li>
