deploy: 02b3d2b60818dcfe48c4b1e084647bff203792cc

--- a/genindex.html
+++ b/genindex.html
@@ -1887,7 +1887,7 @@
 </li>
       <li><a href="doc/api/table/classes/cogent3.util.table.Table.html#cogent3.util.table.Table.title">title() (Table property)</a>
 </li>
-      <li><a href="doc/api/table/classes/cogent3.util.table.Table.html#cogent3.util.table.Table.to_contingency">to_contingency() (Table method)</a>
+      <li><a href="doc/api/table/classes/cogent3.util.table.Table.html#cogent3.util.table.Table.to_categorical">to_categorical() (Table method)</a>
 </li>
       <li><a href="doc/api/table/classes/cogent3.util.table.Table.html#cogent3.util.table.Table.to_csv">to_csv() (Table method)</a>
 </li>
